fix tap target overlap

--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -14,7 +14,7 @@ header {
 		.sub {
 			display: flex;
 			gap: 24px;
-			padding-top: 4px;
+			padding-top: 6px;
 			padding-inline: 16px;
 		}
 
